src/snapshots/bluetui__notification__tests__10048321478723220837-Info.snap
---
source: src/notification.rs
expression: terminal.backend()
---
" ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓  "
" ┃                                   Info                                    ┃  "
" ┃    extremely long WITH newline Lorem ipsum dolor sit amet, consectetur    ┃  "
" ┃adipiscing elit. Sed id mauris sit amet libero convallis fringilla quis non┃  "
" ┃   augue. In sollicitudin quam sed magna finibus, vitae malesuada magna    ┃  "
" ┃                                porttitor.                                 ┃  "
" ┃ Pellentesque in dictum dui. Nullam nec mi venenatis, faucibus odio eget,  ┃  "
" ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
