src/snapshots/bluetui__notification__tests__11353925441405961020-Error.snap
---
source: src/notification.rs
expression: terminal.backend()
---
"                                                                     ┏━━━━━━━┓  "
"                                                                     ┃ Error ┃  "
"                                                                     ┃ short ┃  "
"                                                                     ┗━━━━━━━┛  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
