src/snapshots/bluetui__notification__tests__11353925441405961020-Warning.snap
---
source: src/notification.rs
expression: terminal.backend()
---
"                                                                   ┏━━━━━━━━━┓  "
"                                                                   ┃ Warning ┃  "
"                                                                   ┃  short  ┃  "
"                                                                   ┗━━━━━━━━━┛  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
