src/snapshots/bluetui__notification__tests__15528810436234314490-Error.snap
---
source: src/notification.rs
expression: terminal.backend()
---
"                                                                   ┏━━━━━━━━━┓  "
"                                                                   ┃  Error  ┃  "
"                                                                   ┃  with   ┃  "
"                                                                   ┃ newline ┃  "
"                                                                   ┗━━━━━━━━━┛  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
