src/snapshots/bluetui__notification__tests__15528810436234314490-Warning.snap
---
source: src/notification.rs
expression: terminal.backend()
---
"                                                                   ┏━━━━━━━━━┓  "
"                                                                   ┃ Warning ┃  "
"                                                                   ┃  with   ┃  "
"                                                                   ┃ newline ┃  "
"                                                                   ┗━━━━━━━━━┛  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
