src/snapshots/bluetui__notification__tests__longer withnewline-Error.snap
---
source: src/notification.rs
expression: terminal.backend()
---
"                                                               ┏━━━━━━━━━━━━━┓  "
"                                                               ┃    Error    ┃  "
"                                                               ┃ longer with ┃  "
"                                                               ┃   newline   ┃  "
"                                                               ┗━━━━━━━━━━━━━┛  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
